--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <extends src="default.html">
-    <block name="main">
-        <p>Content Here</p>
-    </block>
+<block name="head">
+    <title>Page Title here</title>
+</block>
+<block name="main">
+    <p>Content Here</p>
+</block>
 </extends>
